@@ -1,4 +1,4 @@
-/*	$NetBSD: main.c,v 1.7 2007/05/31 19:54:55 manu Exp $	*/
+/*	$NetBSD: main.c,v 1.8 2008/07/22 01:30:02 mgrooms Exp $	*/
 
 /* Id: main.c,v 1.25 2006/06/20 20:31:34 manubsd Exp */
 
@@ -198,8 +198,15 @@ main(ac, av)
 #endif
 
 #ifdef HAVE_LIBLDAP
-	if (xauth_ldap_init() != 0)
-		errx(1, "could not initialize libldap");
+	if (xauth_ldap_init_conf() != 0)
+		errx(1, "could not initialize ldap config");
+#endif
+
+#ifdef HAVE_LIBRADIUS
+	if (xauth_radius_init_conf(0) != 0) {
+		errx(1, "could not initialize radius config");
+		/* NOTREACHED*/
+	}
 #endif
 
 	/*
